[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/gfx/player/antmc.png" type="Texture" id=1]
[ext_resource path="res://src/player/Fall.gd" type="Script" id=2]
[ext_resource path="res://src/player/Idle.gd" type="Script" id=3]
[ext_resource path="res://src/player/Walk.gd" type="Script" id=4]
[ext_resource path="res://src/player/Player.gd" type="Script" id=5]
[ext_resource path="res://src/player/PlatformController.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/player/Jump.gd" type="Script" id=7]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" type="Script" id=8]
[ext_resource path="res://addons/xsm/state.gd" type="Script" id=9]
[ext_resource path="res://addons/xsm/state_animation.gd" type="Script" id=10]
[ext_resource path="res://src/player/Dash.gd" type="Script" id=11]
[ext_resource path="res://src/player/CanDash.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=486]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "jump",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [  ],
"loop": false,
"name": "trip",
"speed": 14.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 18.0

[sub_resource type="Animation" id=97]
resource_name = "Idle"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=487]
resource_name = "Jump"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}

[sub_resource type="Animation" id=204]
length = 0.001

[sub_resource type="Animation" id=488]
resource_name = "Run"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}

[sub_resource type="Animation" id=489]
resource_name = "trip"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "trip" ]
}

[sub_resource type="Animation" id=99]
resource_name = "left"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=100]
resource_name = "right"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Courier" type="KinematicBody2D" groups=["player"]]
collision_layer = 4
script = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -22 )
frames = SubResource( 486 )
animation = "idle"
playing = true
flip_h = true

[node name="PlatformController" parent="." instance=ExtResource( 6 )]
dash_cooldown = 0.5
max_speed = 200.0
max_accel = 40.0
max_deccel = 100.0
dash_boost = 700.0
h = 200.0
v_limit = 500.0
damping_speed = 150.0
air_accel_factor = 0.5
coyote_time = 0.1
allow_wall_jump = true
xsm_path = NodePath("../XSM")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -19 )
shape = SubResource( 1 )

[node name="XSM" type="Node" parent="."]
script = ExtResource( 9 )
history_size = 0
fsm_owner = NodePath("../PlatformController")
disabled = false
debug_mode = false
timed = false
next_state = NodePath("Idle")

[node name="Idle" type="Node" parent="XSM"]
script = ExtResource( 3 )
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "Idle"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("Fall")

[node name="Dash" type="Node" parent="XSM"]
script = ExtResource( 11 )
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "dash"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("../Idle")

[node name="CanDash" type="Node" parent="XSM"]
script = ExtResource( 13 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("../Idle")

[node name="Fall" type="Node" parent="XSM/CanDash"]
script = ExtResource( 2 )
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = "NONE"
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="Walk" type="Node" parent="XSM/CanDash"]
script = ExtResource( 4 )
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = "Run"
anim_times_to_play = 1
on_anim_finished = 1
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="Jump" type="Node" parent="XSM/CanDash"]
script = ExtResource( 7 )
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = "Jump"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="Trip" type="Node" parent="XSM"]
script = ExtResource( 10 )
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "trip"
anim_times_to_play = 1
on_anim_finished = 4
disabled = false
debug_mode = false
timed = false
next_state = NodePath("../Idle")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 97 )
anims/Jump = SubResource( 487 )
anims/RESET = SubResource( 204 )
anims/Run = SubResource( 488 )
anims/trip = SubResource( 489 )

[node name="DirAnimationPlayer" type="AnimationPlayer" parent="."]
anims/left = SubResource( 99 )
anims/right = SubResource( 100 )

[node name="Sfx" type="Node2D" parent="."]

[node name="SFXJump" type="AudioStreamPlayer2D" parent="Sfx"]
script = ExtResource( 8 )
random_volume_range = 0
random_pitch_range = 0

[node name="SFXLand" type="AudioStreamPlayer2D" parent="Sfx"]
script = ExtResource( 8 )
random_volume_range = 0
random_pitch_range = 0

[node name="SFXRun" type="AudioStreamPlayer2D" parent="Sfx"]
script = ExtResource( 8 )
random_volume_range = 0
random_pitch_range = 0

[node name="FootstepTimer" type="Timer" parent="Sfx"]
wait_time = 0.3

[node name="packages" type="Node2D" parent="."]
position = Vector2( -15, -14 )

[connection signal="timeout" from="Sfx/FootstepTimer" to="." method="_on_FootstepTimer_timeout"]
